quoin-macros-tests/tests/ui/component_state_missing_default_fail.rs
use quoin_macros::component;

component! {
    TestNoDefault {
        state {
            count: u32, // missing default
        }
        render {
            "hello"
        }
    }
}

fn main() {}
